07-19-2025 ... 0.4.0.0 ... Transposition Table (Cutoffs) ........ (51.9 +/- 24.9) , (8 + 0.08), (SPRT, 636), (Local)
07-19-2025 ... 0.4.1.0 ... TT Move .............................. (92.4 +/- 34.5) , (8 + 0.08), (SPRT, 331), (Local)
07-19-2025 ... 0.4.1.1 ... Fix TT Resize UCI and Adjust Bench
08-02-2025 ... 0.4.1.2 ... Add Non-Functional Changes from Multithread2
08-02-2025 ... 0.5.0.0 ... Quiet History ........................ (39.9 +/- 19.9) , (8 + 0.08), (SPRT, 936), (https://sscg13.pythonanywhere.com/test/651/)
08-02-2025 ... 0.5.1.0 ... Fix TT Score Casting ................. (71.8 +/- 26.1) , (8 + 0.08), (SPRT, 422), (https://sscg13.pythonanywhere.com/test/652/)
08-02-2025 ... 0.5.2.0 ... Pass isPV Correctly in PVS ........... (46.4 +/- 21.1) , (8 + 0.08), (SPRT, 784), (https://sscg13.pythonanywhere.com/test/653/)
08-02-2025 ... 0.6.0.0 ... Reverse Futility Pruning ............. (177.7 +/- 47.7), (8 + 0.08), (SPRT, 242), (https://sscg13.pythonanywhere.com/test/654/)
08-02-2025 ... 0.6.1.0 ... Null Move Pruning .................... (54.9 +/- 23.7) , (8 + 0.08), (SPRT, 606), (https://sscg13.pythonanywhere.com/test/659/)
08-03-2025 ... 0.6.2.0 ... Aspiration Windows ................... (8.2 +/- 6.5)   , (8 + 0.08), (SPRT, 7048),(https://sscg13.pythonanywhere.com/test/666/)
08-03-2025 ... 0.6.3.0 ... Killer Move .......................... (24.3 +/- 14.8) , (8 + 0.08), (SPRT, 1432),(https://sscg13.pythonanywhere.com/test/670/)
08-03-2025 ... 0.7.0.0 ... Late Move Reductions ................. (64.3 +/- 25.2) , (8 + 0.08), (SPRT, 552), (https://sscg13.pythonanywhere.com/test/672/)
08-06-2025 ... 0.8.0.0 ... SMP with Threadpool (2v1 elo shown) .. (83.8 +/- 17.3) , (8 + 0.08), (N = 1000) , (https://sscg13.pythonanywhere.com/test/690/) 
08-06-2025 ... 0.8.0.1 ... Fix PV Table
08-08-2025 ... 0.8.0.2 ... Mate Distance Prune in PV nodes
08-08-2025 ... 0.8.0.3 ... Move UCI into Interface Object