@@ -29,3 +29,4 @@ Changelog
 08-06-2025 ... 0.8.0.1 ... Fix PV Table
 08-08-2025 ... 0.8.0.2 ... Mate Distance Prune in PV nodes
 08-08-2025 ... 0.8.0.3 ... Move UCI into Interface Object
+08-09-2025 ... 0.8.0.4 ... Alias Search Functions, Soft Node Limit
